samples/ut/access/FailPrivate05.err
FailPrivate05.z2(7, 27): error: can't access non public constant 'AA' of class 'Foo'